<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="20dp"
            >


            <ImageView
                android:id="@+id/updateImageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="4dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/contacto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"

                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/numcontrol"
                    android:gravity="center"


                    android:hint="@string/addControlNumberPlaceholder"
                    android:textSize="11sp"
                    android:fontFamily="@font/aref_ruqaa"
                    />

                <EditText
                    android:fontFamily="@font/aref_ruqaa"
                    android:id="@+id/etUpdateControlNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/addControlNumberPlaceholder"
                    android:inputType="text"

                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"

                >

                <TextView

                    android:fontFamily="@font/aref_ruqaa"
                    android:hint="@string/addNamePlaceholder"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/nombre"
                    android:gravity="center"
                    android:textSize="12sp" />

                <EditText
                    android:fontFamily="@font/aref_ruqaa"
                    android:id="@+id/etUpdateName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/addNamePlaceholder"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"

                >


                <TextView
                    android:fontFamily="@font/aref_ruqaa"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/carrera"
                    android:gravity="center"
                    android:hint="@string/addCareerPlaceholder"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinnerUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/aref_ruqaa"


                    />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"


                >

                <TextView

                    android:fontFamily="@font/aref_ruqaa"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/semestre"
                    android:gravity="center"
                    android:hint="@string/addSemesterPlaceholder"
                    android:textSize="12sp" />

                <EditText
                    android:fontFamily="@font/aref_ruqaa"
                    android:id="@+id/etUpdateSemester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/addSemesterPlaceholder"
                    android:inputType="number"
                    android:text="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">


                <TextView
                    android:fontFamily="@font/aref_ruqaa"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/grupo"
                    android:gravity="center"
                    android:hint="@string/addGroupPlaceholder"
                    android:textSize="12sp" />


                <EditText
                    android:fontFamily="@font/aref_ruqaa"
                    android:id="@+id/etUpdateGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/addGroupPlaceholder"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>




        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>