<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:clickable="true"
        app:srcCompat="@drawable/okay"
        android:onClick="btnCreatePressed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingHorizontal="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/numcontrol"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddControlNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"


                android:layout_weight="1"

                android:hint="@string/addControlNumberPlaceholder"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp"
                android:fontFamily="@font/aref_ruqaa"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/nombre"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aref_ruqaa"

                android:layout_weight="1"
                android:hint="@string/addNamePlaceholder"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">


            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/carrera"
                android:textSize="12sp" />

            <Spinner

                android:fontFamily="@font/aref_ruqaa"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColorHint="@color/colorPrimary"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/semestre"
                android:textSize="12sp" />

            <EditText
                android:fontFamily="@font/aref_ruqaa"
                android:id="@+id/etAddSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_weight="1"
                android:hint="@string/addSemesterPlaceholder"
                android:inputType="number"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/grupo"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etAddGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aref_ruqaa"

                android:layout_weight="1"
                android:hint="@string/addGroupPlaceholder"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>











    </LinearLayout>







</androidx.coordinatorlayout.widget.CoordinatorLayout>